--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bike Zone</title>
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+  <!-- My Css File Link -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="container-lg my-5">
 
   <!-- Header Html Codes -->
   <header>
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand fw-bold fs-2" href="#">Biker Zone</a>
@@ -43,9 +49,9 @@
     <!-- Banner Slider -->
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active bg-danger-subtle mt-5 rounded-1 p-5">
+        <div class="carousel-item active bg-danger bg-opacity-10 mt-5 rounded-1 p-5">
           <div class="row">
-            <div class="align d-flex align-items-center">
+            <div class="align d-flex align-items-center flex-column flex-md-row">
               <div class="col-12 col-md-6">
                 <h1>Ride-on R15 V4 <br> with Smile</h1>
                 <p>Amet minim mollit non deserunt ullamco <br>
@@ -58,49 +64,104 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item bg-danger-subtle mt-5 rounded-1 p-5">
-          <div class="align d-flex align-items-center">
-            <div class="col-12 col-md-6">
-              <h1>Ride-on R15 V4 <br> with Smile</h1>
-              <p>Amet minim mollit non deserunt ullamco <br>
-                est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
-              <button class="btn btn-primary btn-lg ms-1">Purchase</button>
-            </div>
-            <div class="col-12 col-md-6">
-              <img src="images/slider/bike2.png" class="d-block w-100" alt="...">
-            </div>
+        <div class="carousel-item bg-danger bg-opacity-10 mt-5 rounded-1 p-5">
+          <div class="align d-flex align-items-center flex-column flex-md-row"">
+            <div class=" col-12 col-md-6">
+            <h1>Ride-on R15 V4 <br> with Smile</h1>
+            <p>Amet minim mollit non deserunt ullamco <br>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+            <button class="btn btn-primary btn-lg ms-1">Purchase</button>
           </div>
-        </div>
-        <div class="carousel-item bg-danger-subtle mt-5 rounded-1 p-5">
-          <div class="align d-flex align-items-center">
-            <div class="col-12 col-md-6">
-              <h1>Ride-on R15 V4 <br> with Smile</h1>
-              <p>Amet minim mollit non deserunt ullamco <br>
-                est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
-              <button class="btn btn-primary btn-lg ms-1">Purchase</button>
-            </div>
-            <div class="col-12 col-md-6">
-              <img src="images/slider/bike3.png" class="d-block w-100" alt="...">
-            </div>
+          <div class="col-12 col-md-6">
+            <img src="images/slider/bike2.png" class="d-block w-100" alt="...">
           </div>
-
-
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+      <div class="carousel-item bg-danger bg-opacity-10 mt-5 rounded-1 p-5">
+        <div class="align d-flex align-items-center flex-column flex-md-row"">
+            <div class=" col-12 col-md-6">
+          <h1>Ride-on R15 V4 <br> with Smile</h1>
+          <p>Amet minim mollit non deserunt ullamco <br>
+            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+          <button class="btn btn-primary btn-lg ms-1">Purchase</button>
+        </div>
+        <div class="col-12 col-md-6">
+          <img src="images/slider/bike3.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+
+
+    </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon bz0-caurosol-light-red-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon bz0-caurosol-light-red-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
     </div>
   </header>
 
   <!-- Main Html Codes -->
   <main>
 
+    <!-- Featured Bikes Section -->
+    <div class="featured-bikes mt-5 text-start text-md-center">
+      <h1>Featured Bikes In This Year</h1>
+      <p class="text-danger fw-bold">Best bike collection</p>
+      <hr class="w-25 mx-md-auto border-danger">
+      <div class="row mt-5 row-cols-1 row-cols-sm-2 row-cols-md-3 mx-3">
+        <div class="col">
+          <img class="w-100" src="images/others/feature-bike.png" alt="">
+        </div>
+        <div class="col">
+          <img class="w-100" src="images/others/feature-bike.png" alt="">
+        </div>
+        <div class="col">
+          <img class="w-100" src="images/others/feature-bike.png" alt="">
+        </div>
+      </div>
+    </div>
+
+    <!-- latest News Section -->
+    <section>
+      <div class="latest-news mt-5 fw-bold">
+        <h2 class="text-start text-md-center mb-3">latest News</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card rounded-4">
+              <img class="mb-3" src="images/others/latest1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet <br> faucibus sed id nisi lectus at.</p>
+                <button class="btn btn-primary btn-lg ms-1 mt-4">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card rounded-4">
+              <img class="mb-3" src="images/others/latest2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Motorcycles & Scooters</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet <br> faucibus sed id nisi lectus at.</p>
+                <button class="btn btn-outline-primary btn-lg ms-1 mt-4">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card rounded-4">
+              <img class="mb-3" src="images/others/latest3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">2021 Honda CBR500R</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet <br> faucibus sed id nisi lectus at.</p>
+                <button class="btn btn-outline-primary btn-lg ms-1 mt-4">Read More</button>
+              </div>
+            </div>
+          </div>
+      </div>
+    </section>
   </main>
 
   <!-- Footer Html Codes -->
