Happy Client Section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
   <!-- My Css File Link -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Font Awesome Kit Link -->
+  <script src="https://kit.fontawesome.com/3763358a39.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="container-lg my-5">
@@ -126,7 +129,7 @@
     </div>
 
     <!-- latest News Section -->
-    <section>
+    <section class="mt-5">
       <div class="latest-news mt-5 fw-bold">
         <h2 class="text-start text-md-center mb-3">latest News</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -135,7 +138,9 @@
               <img class="mb-3" src="images/others/latest1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Ducati XDIAVEL S-73</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet <br> faucibus sed id nisi lectus at.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet
+                  <br> faucibus sed id nisi lectus at.
+                </p>
                 <button class="btn btn-primary btn-lg ms-1 mt-4">Read More</button>
               </div>
             </div>
@@ -145,7 +150,9 @@
               <img class="mb-3" src="images/others/latest2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Motorcycles & Scooters</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet <br> faucibus sed id nisi lectus at.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet
+                  <br> faucibus sed id nisi lectus at.
+                </p>
                 <button class="btn btn-outline-primary btn-lg ms-1 mt-4">Read More</button>
               </div>
             </div>
@@ -155,13 +162,85 @@
               <img class="mb-3" src="images/others/latest3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">2021 Honda CBR500R</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet <br> faucibus sed id nisi lectus at.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Lacus, fermentum amet
+                  <br> faucibus sed id nisi lectus at.
+                </p>
                 <button class="btn btn-outline-primary btn-lg ms-1 mt-4">Read More</button>
               </div>
             </div>
           </div>
-      </div>
+        </div>
     </section>
+
+    <!-- Happy Client Section -->
+    <section>
+      <div class="happy-client mt-5">
+        <h2 class="text-start text-md-center mt-5 mb-3">Happy <span class="text-primary">Clients says</span></h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card rounded-4 text-center">
+              <div class="ps position-relative">
+              <img class="mt-5 mb-2 w-50" src="images/others/user-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach your
+                  financial <br>goal for the month and year.</p>
+                <div class="icons text-warning">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                </div>
+                <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
+                <p><small class="fw-bold">Banker</small></p>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card rounded-4 text-center">
+              <div class="ps position-relative">
+              <img class="mt-5 mb-2 w-50" src="images/others/user-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach
+                  yourfinancial <br>goal for the month andyear.</p>
+                <div class="icons text-warning">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
+                <p><small class="fw-bold">Banker</small></p>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card rounded-4 text-center">
+              <div class="ps position-relative">
+              <img class="mt-5 mb-2 w-50" src="images/others/user-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach
+                  yourfinancial <br>goal for the month andyear.</p>
+                <div class="icons text-warning">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                </div>
+                <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
+                <p><small class="fw-bold">Banker</small></p>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    
   </main>
 
   <!-- Footer Html Codes -->
