--- a/index.html
+++ b/index.html
@@ -180,67 +180,143 @@
           <div class="col">
             <div class="card rounded-4 text-center">
               <div class="ps position-relative">
-              <img class="mt-5 mb-2 w-50" src="images/others/user-1.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach your
-                  financial <br>goal for the month and year.</p>
-                <div class="icons text-warning">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
+                <img class="mt-5 mb-2 w-50" src="images/others/user-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach your
+                    financial <br>goal for the month and year.</p>
+                  <div class="icons text-warning">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                  </div>
+                  <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
+                  <p><small class="fw-bold">Banker</small></p>
                 </div>
-                <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
-                <p><small class="fw-bold">Banker</small></p>
-              </div>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card rounded-4 text-center">
               <div class="ps position-relative">
-              <img class="mt-5 mb-2 w-50" src="images/others/user-2.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach
-                  yourfinancial <br>goal for the month andyear.</p>
-                <div class="icons text-warning">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star-half-stroke"></i>
+                <img class="mt-5 mb-2 w-50" src="images/others/user-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach
+                    yourfinancial <br>goal for the month andyear.</p>
+                  <div class="icons text-warning">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                  </div>
+                  <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
+                  <p><small class="fw-bold">Banker</small></p>
                 </div>
-                <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
-                <p><small class="fw-bold">Banker</small></p>
-              </div>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card rounded-4 text-center">
               <div class="ps position-relative">
-              <img class="mt-5 mb-2 w-50" src="images/others/user-3.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach
-                  yourfinancial <br>goal for the month andyear.</p>
-                <div class="icons text-warning">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-regular fa-star"></i>
+                <img class="mt-5 mb-2 w-50" src="images/others/user-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Slate helps you see how <br> many more days you need <br>to work to reach
+                    yourfinancial <br>goal for the month andyear.</p>
+                  <div class="icons text-warning">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                  </div>
+                  <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
+                  <p><small class="fw-bold">Banker</small></p>
                 </div>
-                <p class="mt-3"><small class="text-primary">Regina Miles</small> <br></p>
-                <p><small class="fw-bold">Banker</small></p>
-              </div>
               </div>
             </div>
           </div>
         </div>
     </section>
 
-    
+    <!-- Questions Section -->
+    <section>
+      <div class="question text-center my-5">
+        <h2>Frequently Asked Questions</h2>
+        <div class="d-flex gap-5 align-items-center my-5">
+          <img class="w-50" src="images/others/faq.png" alt="">
+          <div class="accordion w-50" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                  aria-expanded="true" aria-controls="collapseOne">
+                  What are the most important things I should
+                  know about riding a bike?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws.
+                    Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+                    compliant bike rider.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  How can I tell if my helmet is old and I need a
+                  new one?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws.
+                    Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+                    compliant bike rider.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  My bike has been in storage is it safe to ride?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws.
+                    Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+                    compliant bike rider.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+                  What rules should I follow when riding my bike?
+                </button>
+              </h2>
+              <div id="collapsefour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws.
+                    Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+                    compliant bike rider.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- Footer Html Codes -->
